tests/correct/formals.py
def f(n):
  print n

