tests/error/test-badclass2.py
def f ():
    class Bar:
        x = 3
    return Bar()
